2009-04-07  Stefan Jahn  <stefan@lkcc.org>

	* subcircuit.cpp (vhdlCode): Added subcircuit parameters in VHDL
	using the generic map() feature.

	* phototransistor.cpp (createSymbol): Fixed symbol painting.

2009-04-01  Stefan Jahn  <stefan@lkcc.org>

	* rlcg.cpp (RLCG): Added new transmission line defined by RLCG
	loads.

2009-03-29  Stefan Jahn  <stefan@lkcc.org>

	* relais.cpp (Relais): Added marks to visualize input voltage
	polarity.

	* phototransistor.cpp (phototransistor): Added new phototransistor
	model.  Thanks to Mike!

2009-03-18  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (load): Fixed bug in loading RFEDD with more than
	4 parameters specified.

2009-03-15  Stefan Jahn  <stefan@lkcc.org>

	* msrstub.cpp (MSrstub): New component: microstrip radial stub.

2009-03-14  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (createSymbol): Fixed DIN symbol for basic XNOR
	gate component.

2009-03-10  Stefan Jahn  <stefan@lkcc.org>

	* vhdlfile.cpp (loadFile): Extracting signal types and passing
	them to port specifications.

2009-03-03  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (libcomponents_a_SOURCES): Added many new digital
	primitives.  Thanks a lot to Mike Brinson for the huge effort.

2008-11-08  Stefan Jahn  <stefan@lkcc.org>

	* logical_buf.cpp (Logical_Buf): Added new digital buffer
	component.

2008-10-31  Stefan Jahn  <stefan@lkcc.org>

	* EKV26pMOS.cpp, EKV26nMOS.cpp: Removed these files.

	* EKV26MOS.cpp (info_pmos): Changing default values for PMOS type
	model.

2008-10-28  Stefan Jahn  <stefan@lkcc.org>

	* diode.cpp (createSymbol): Added 'Varactor' symbol mode.

2008-10-11  Stefan Jahn  <stefan@lkcc.org>

	* rectline.cpp (RectLine): Added 'Material' parameter.

2008-10-09  Stefan Jahn  <stefan@lkcc.org>

	* photodiode.cpp (photodiode): Added new photodiode model.  Thanks
	to Mike Brinson!

2008-10-02  Stefan Jahn  <stefan@lkcc.org>

	* hicumL2V2p23.cpp (hicumL2V2p23): Added new HICUM/L2 v2.23 model.
